# zip2hashcat

./: .gitignore  LICENSE  README.md  pyproject.toml  zip2hashcat.py
scripts/: build_standalone.py
tests/: test_extractor.py
zip2hashcat/: __init__.py  cli.py  extractor.py
