[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zip2hashcat"
version = "1.1.0"
description = "Extract ZIP password hashes in native hashcat format — no zip2john needed"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "oliverjueguen"}]
keywords = ["zip", "hashcat", "security", "pentesting", "cracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
zip2hashcat = "zip2hashcat.cli:main"

[project.urls]
Homepage = "https://github.com/oliverjueguen/zip2hashcat"

[tool.setuptools.packages.find]
include = ["zip2hashcat*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
